--- a/css/seletores.html
+++ b/css/seletores.html
@@ -6,7 +6,11 @@
     <title>CSS Selectors</title>
     <link rel="stylesheet" href="css/tag.css">
     <style>
-        /* ... */
+        * {
+            background-color: aqua;
+            font-size: 40px;
+            color: black;
+        }
     </style>
 </head>
 
