--- a/css/box.html
+++ b/css/box.html
@@ -5,7 +5,35 @@
     <meta charset="UTF-8">
     <title>Box Model</title>
     <style>
-        /* ... */
+        * {
+            padding: 0;
+            margin: 0;
+        }
+
+        body {
+            font-size: 40px;
+        }
+
+        .c1 {
+            background-color: orange;
+        }
+
+        .c2 {
+            background-color: skyblue;
+        }
+
+        .c3 {
+            background-color: tomato;
+        }
+
+        div {
+            width: 200px;
+            height: 200px;
+            float: left;
+            padding: 50px;
+            margin: 10px;
+            border: solid 5px black;
+        }
     </style>
 </head>
 
