--- a/css/alturaLargura.html
+++ b/css/alturaLargura.html
@@ -5,9 +5,17 @@
     <meta charset="UTF-8">
     <title>Altura e Largura</title>
     <style>
+
+        html {
+            height: 100%;
+        }
+
         body {
+            margin: 0;
+            padding: 0;
             font-size: 40px;
             background-color: coral;
+            height: 100%;
         }
 
         div {
@@ -16,6 +24,13 @@
 
         span {
             background-color: dodgerblue;
+        }
+
+        span, div {
+            width: 48%;
+            height: 48%;
+            display: inline-block;
+            margin: 5px;
         }
     </style>
 </head>
