--- a/css/tamanhoBox.html
+++ b/css/tamanhoBox.html
@@ -4,14 +4,28 @@
     <meta charset="UTF-8">
     <title>Tamanho Box</title>
     <style>
-        body {
-            font-size: 45px;
+        * {
+            box-sizing: content-box;
         }
+
+        body {
+            font-size: 25px;
+        }
+
+        div {
+            background-color: aqua;
+            width: 100%;
+            height: 300px;
+            display: block;
+        }
+
     </style>
 </head>
 <body>
     <div>
-        O tamanho do Box é...
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia ducimus magnam numquam quasi facere natus dicta. Est adipisci minus explicabo ipsa, delectus rerum consectetur facilis tempore odit, maiores, aperiam labore!</p>
+        <a href="https://www.youtube.com/watch?v=hzYtZrQxhW4"><img src="../bootstrap/exercicios/imgs/img1.png" width="100px"alt="img">
+        </a>
     </div>
 </body>
 </html>
