--- a/css/cores.html
+++ b/css/cores.html
@@ -11,6 +11,13 @@
             https://coolors.co/
             http://paletton.com/
         */
+        body {
+            background-color: aliceblue;
+            background-color: #000;
+            background-color: rgb(38, 61, 35);
+            background-color: #f0f0f0;
+            background-color: rgb(190, 190, 190);
+        }
     </style>
 </head>
 
