--- a/css/unidades1.html
+++ b/css/unidades1.html
@@ -5,7 +5,19 @@
     <meta charset="UTF-8">
     <title>Unidades #01</title>
     <style>
-        /* ... */
+            .unidades-absolutas {
+                position: absolute;
+                font-size: 40px;
+                padding: 20px;
+                border: solid 5px black;
+            }
+
+            .unidades-relativas {
+                position: absolute;
+                font-size: 4em;
+                padding: 5%;
+                border: solid 1vw #222;
+            }
     </style>
 </head>
 
