--- a/css/texto.html
+++ b/css/texto.html
@@ -16,6 +16,40 @@
             flex-direction: column;
             align-items: center;
         }
+
+        div {
+            font-size: 40px;
+        }
+
+        p, a {
+            font-size: 2.5rem;
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            text-decoration: none;
+            margin: 10px;
+        }
+
+        /* a:hover {
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            color: rgb(255, 0, 0);
+            font-weight: 500;
+        } */
+        
+        .botao {
+            font-size: 28px;
+            text-decoration: none;
+            padding: 10px 30px;
+            border-radius: 15px;
+        }
+
+        .destaque {
+            color: white;
+            background: tomato;
+            box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.432);
+        }
+
+        .destaque:active {
+            box-shadow: none;
+        }
     </style>
 </head>
 
