--- a/css/position.html
+++ b/css/position.html
@@ -5,7 +5,64 @@
     <meta charset="UTF-8">
     <title>Position</title>
     <style>
-        /* ... */
+        
+        div {
+            font-size: 60px;
+            padding: 30px;
+            border: solid 5px black;
+            color: aliceblue;
+        }
+
+        .static {
+            top: 100px;
+            left: 100px;
+            background-color: aquamarine;
+        }
+
+        .fixed {
+            position: fixed;
+            bottom: 30px;
+            right: 0px;
+            background-color: tomato;
+        }
+
+        .relative1 {
+            position: relative;
+            background-color: blueviolet;
+            left: 50px;
+            top: 5px;
+        }
+
+        .absolute1 {
+            position: absolute;
+            background-color: crimson;
+            left: 350px;
+            top: 120px;
+        }
+
+        .relative2 {
+            position: relative;
+            left: 250px;
+            top: 2000px;
+            width: 200px;
+            height: 200px;
+            background-color: chartreuse;
+        }
+
+        .absolute2 {
+            position: absolute;
+            left: 10px;
+            top: 10px;
+            width: 20px;
+            height: 20px;
+            background-color: orange;
+        }
+
+        .sticky {
+            position: sticky;
+            background-color: 777;
+            top: 0px;
+        }
     </style>
 </head>
 
@@ -14,12 +71,11 @@
     <div class="fixed">Fixed</div>
     <div class="relative1">Relative</div>
     <div class="absolute1">Absolute</div>
-
+    <div class="sticky">Sticky</div>
     <div class="relative2">
         <div class="absolute2"></div>
     </div>
-
-    <div class="sticky">Sticky</div>
+   
     <p style="padding-bottom: 2000px;">Opa</p>
 </body>
 
