--- a/css/desafioMenu.html
+++ b/css/desafioMenu.html
@@ -7,7 +7,115 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <style>
-        /* ... */
+
+        * {
+            box-sizing: border-box;
+            margin: 0;
+        }
+        
+        body {
+            margin: 0;
+            background-color: ghostwhite;
+            font-family: Oswald;
+        }
+
+        .cabecalho {
+            background: rgba(0, 0, 0, 0.774);
+            border-bottom: solid 5px salmon;
+            height: 80px;
+            box-sizing: content-box;
+        }
+
+        .logo {
+            display: inline-block;
+            height: 80px;
+            padding: 10px;
+        }
+
+        .logo img {
+            height: 100%;
+        }
+
+        .menu-toggle {
+            float: right;
+            color: rgb(245, 245, 245);
+            background-color: gray;
+            border-radius: 5px;
+            height: 40px;
+            padding: 10px 20px;
+            margin: 20px 15px;
+        }
+
+        menu {
+            display: inline-block;
+            vertical-align: top;
+            height: 80px;
+            padding: 25px;
+        }
+
+        .menu ul {
+            margin: 0;
+            padding: 0;
+        }
+
+        .menu li {
+            display: inline-block;
+        }
+
+        .cabecalho a {
+            text-decoration: none;
+            color: #eee;
+            font-size: 1em;
+        }
+
+        .menu a {
+            padding: 15px;
+        }
+
+        .autenticacao {
+            float: right;
+            height: 80px;
+            padding: 25px;
+        }
+
+        .menu a:selected {
+            background-color: aqua;
+            color: black
+        }
+
+        .menu a:hover {
+            background-color: aqua;
+            color: black
+        }
+
+        .botao {
+            border-radius: 30px;
+            padding: 10px 25px;
+            margin: 10px;
+        }
+
+        .destaque {
+            background-color: #f50a31;
+            color: #eee;
+        }
+
+        @media (min-width: 670px) {
+            .menu-toggle {
+                display: none;
+            }
+        }
+
+        @media (max-width: 680px) {
+            .menu {
+                display: none;
+            }
+        }
+
+        @media (max-width: 910px) {
+            .autenticacao {
+                display: none;
+            }
+        }
     </style>
 </head>
 
@@ -24,7 +132,7 @@
         <nav class="menu">
             <ul>
                 <li>
-                    <a href="#inicio">Início</a>
+                    <a href="#inicio" >Início</a>
                 </li>
                 <li>
                     <a href="#cursos">Cursos</a>
@@ -44,7 +152,15 @@
     </header>
 
     <script>
-        // ...
+        window.onhashchange = function(e) {
+            const oldURL = e.oldURL.split('#')[1];
+            const newURL = e.newURL.split('#')[1];
+            console.log(oldURL, newURL);
+            const oldMenu = document.querySelector(`.menu a[href='#${oldURL}']`);
+            const newMenu = document.querySelector(`.menu a[href='#${newURL}']`);
+            oldMenu && oldMenu.classList.remove('selected');
+            newMenu && newMenu.classList.add('selected');
+        }
     </script>
 </body>
 
