--- a/css/desafioCard.html
+++ b/css/desafioCard.html
@@ -5,7 +5,88 @@
     <meta charset="UTF-8">
     <title>Desafio Card</title>
     <style>
-        /* ... */
+        .curso {
+            display: inline-block;
+            background-color: rgb(240, 238, 237);
+            margin: 10px;
+            width: 280px;
+            box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.39);
+            border: 1px solid rgba(0, 0, 0, 0.055);
+        }
+        .curso img {
+            width: 260px;
+            padding: 10px;
+        }
+
+        .curso h4 {
+            margin: 10px;
+            font-size: 1.4rem;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-weight: 100;
+        }
+
+        .curso p {
+            margin: 10px;
+            font-size: 1.2rem;
+        }
+
+        .preco-de {
+            /* display: inline-block; */
+            font-size: 1.2em;
+            color: red;
+            margin-left: 95px;
+            padding-right: 10px;
+        }
+
+        .preco-por {
+            /* display: inline-block; */
+            font-size: 1.5em;
+            color: green;
+            /* margin-right: 20px; */
+            font-weight: 1000;
+        }
+
+
+        .curso2 {
+            background-color: rgb(240, 238, 237);
+            display: inline-block;
+            margin: 10px;
+            width: 280px;
+            box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.39);
+            border: 1px solid rgba(0, 0, 0, 0.055);
+        }
+        .curso2 img {
+            width: 260px;
+            padding: 10px;
+        }
+
+        .curso-info h4 {
+            margin: 10px;
+            font-size: 1.4rem;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-weight: 100;
+        }
+
+        .curso2 p {
+            margin-top: 25px;
+            margin-left: 10px;
+            font-size: 1.2rem;
+        }
+
+        .preco-de {
+            font-size: 1.2em;
+            color: red;
+            margin-left: 95px;
+            padding-right: 10px;
+        }
+
+        .preco-por {
+            /* display: inline-block; */
+            font-size: 1.5em;
+            color: green;
+            /* margin-right: 20px; */
+            font-weight: 1000;
+        }
     </style>
 </head>
 
@@ -24,11 +105,14 @@
                 <p>Prof. Fulano</p>
             </div>
             <div class="curso-preco">
-                <span class="preco-de">R$80,00</span>
+                <span class="preco-de">R<s>$80,00</s></span>
                 <span class="preco-por">R$50,00</span>
             </div>
         </div>
-        <div class="curso">
+
+
+
+        <div class="curso2">
             <img src="http://files.cod3r.com.br/curso-web/curso2.jpg" />
             <div class="curso-info">
                 <h4>Web Moderno com Javascript + Projetos</h4>
