--- a/css/cssgrid1.html
+++ b/css/cssgrid1.html
@@ -22,6 +22,23 @@
             border: solid 5px dodgerblue;
             background: #fff;
         }
+
+        body {
+            display: grid;
+            grid-template-columns: 50% 50%;
+            grid-template-columns: repeat(4, 10% 10% 10%);
+            grid-template-rows: repeat(11, 100px) 100px;
+            grid-template-columns: 3fr 6fr 3fr;
+            grid-template-columns: 50% 25% 12.5% 12.5%;
+            grid-template-columns: 100px auto auto auto ;
+        }
+
+        .d8 {
+            grid-column-start: 2;
+            grid-column-end: 4;
+            grid-column-end: span 2;
+            
+        }
     </style>
 </head>
 
