--- a/css/cssgrid3.html
+++ b/css/cssgrid3.html
@@ -6,7 +6,69 @@
     <title>CSS Grid #03</title>
     <link rel="stylesheet" href="css/tag.css">
     <style>
-        /* ... */
+
+        body {
+            font-size: 40px;
+        }
+        
+        main {
+            border: 5px solid rgb(213, 228, 144);
+        }
+
+        header {
+            border: 5px solid rgb(212, 59, 59);
+        }
+
+        footer {
+            border: 5px solid rgb(9, 55, 209);
+        }
+
+        nav {
+            border: 5px solid rgb(42, 124, 25);
+        }
+        * {
+            padding: 0;
+            margin: 0;
+        }
+
+        header {
+            grid-area: cabecalho;
+        }
+
+        nav {
+            grid-area: navegacao;
+        }
+
+        main {
+            grid-area: conteudo;
+        }
+
+        footer {
+            grid-area: rodape;
+        }
+
+        body {
+            display: grid;
+            min-height: 100vh;
+            grid-template-columns: 400px 1fr;
+            grid-template-rows: 200px 1fr 200px;
+            grid-template-areas: 
+                'cabecalho cabecalho'
+                'navegacao conteudo'
+                'rodape rodape'; 
+        }
+
+        @media(max-width: 700px) {
+            body {
+                grid-template-columns: 1fr;
+                grid-template-rows: 80px 80px 1fr 100px;
+                grid-template-areas: 
+                    'cabecalho' 
+                    'navegacao'
+                    'conteudo'
+                    'rodape';
+            }
+        }
     </style>
 </head>
 
