--- a/dom/selecionandoElementos2.html
+++ b/dom/selecionandoElementos2.html
@@ -10,7 +10,25 @@
     <div>Segundo</div>
     <div class="terceiro ultimo"><span wb-attrib>.terceiro .ultimo</span></div>
     <script>              
-        // ...
+        document.querySelector('#primeiro').classList.add('destaque')
+        
+        const selecionar = seletor => 
+            document.querySelectorAll(seletor).forEach(e => e.classList.add('destaque'));
+            // retorna um nodeList
+        const deselecionar = seletor => 
+            document.querySelectorAll(seletor).forEach(e => e.classList.remove('destaque'));
+
+            selecionar('div')
+
+            deselecionar('*')
+
+            selecionar('.terceiro.ultimo')
+            deselecionar('*')
+            selecionar(':not(#primeiro)')
+            
+            deselecionar('*')
+            selecionar(':nth-child(1)')
+            deselecionar('*')
     </script>
 </body>
 </html>
