--- a/dom/selecionandoElementos3.html
+++ b/dom/selecionandoElementos3.html
@@ -31,7 +31,12 @@
         <button>Pesquisar</button>
     </form>
     <script>
-        // ...
+        console.log(document.forms)
+        console.log(document.forms[0])
+        console.log(document.getElementsByName('pesquisa'))
+        console.log(document.pesquisa)
+        document.pesquisa.q.value = "DIGITE"
+        document.pesquisa.hs.value = "en-us"
     </script>
 </body>
 
