--- a/dom/acessandoAtributos1.html
+++ b/dom/acessandoAtributos1.html
@@ -15,7 +15,15 @@
         <img src='http://files.cod3r.com.br/curso-web/logo-estreita.png' alt='logo'>
     </div>
     <script>
-        
+        const img = document.querySelector('img')
+        console.log('getAttribute', img.getAttribute('src'))
+        console.log('src', img.src)
+        console.log('src', img.alt)
+
+
+        const link = document.querySelector('a')
+        console.log('href', link.href)
+        link.firstChild.nodeValue = "Novo Texto"
     </script>
 </body>
 
