--- a/dom/acessandoAtributos2.html
+++ b/dom/acessandoAtributos2.html
@@ -17,7 +17,8 @@
         </ul>
     </div>
     <script>
-       
+       const lista = document.querySelector('#compras')
+       console.log('childNodes', lista.childNodes)
     </script>
 </body>
 
