--- a/dom/acessandoClasses.html
+++ b/dom/acessandoClasses.html
@@ -12,7 +12,21 @@
         Classes
     </div>
     <script>
-        // ...
+        const classes = document.querySelector('div').classList
+        classes.add('destaque')
+        classes.remove('destaque')
+        classes.toggle('destaque')
+        console.log(classes.contains('destaque'))
+        classes.toggle('destaque')
+        console.log(classes.length)
+        classes.add('destaque')
+        
+        for(let c of classes) {
+            console.log(c)
+        }
+
+        classes.forEach(c => console.log(c))
+
     </script>
 </body>
 
