--- a/dom/modificandoHTML2.html
+++ b/dom/modificandoHTML2.html
@@ -12,7 +12,13 @@
         <p>Texto Inicial</p>
     </div>
     <script>
-        // ...
+        const div = document.querySelector('div')
+        div.innerHTML = 'texto alterado'
+        // div.outerHTML = 'texto alterado'
+        div.insertAdjacentHTML('beforebegin' , '<p>Antes inicio</p>')
+        div.insertAdjacentHTML('afterbegin' , '<p>Depois inicio</p>')
+        div.insertAdjacentHTML('beforeend' , '<p>Antes fim</p>')
+        div.insertAdjacentHTML('afterend' , '<p>Depois fim</p>')
     </script>
 </body>
 
