--- a/grid-flexbox/gridOuFlexbox.html
+++ b/grid-flexbox/gridOuFlexbox.html
@@ -23,8 +23,30 @@
 
     <section class="flex">
         <div>
-            <img src="" alt="">
+            <img src="img/lobo1.jpg" alt="Imagem Lobo 1">
+            <p>Legenda</p>
         </div>
+        <div>
+            <img src="img/lobo2.jpg" alt="Imagem Lobo 2">
+            <p>Legenda</p>
+        </div>
+        <div>
+            <img src="img/lobo3.jpg" alt="Imagem Lobo 3">
+            <p>Legenda</p>
+        </div>
+        <div>
+            <img src="img/lobo2.jpg" alt="Imagem Lobo 2">
+            <p>Legenda</p>
+        </div>
+        <div>
+            <img src="img/lobo1.jpg" alt="Imagem Lobo 1">
+            <p>Legenda</p>
+        </div>
+        <div>
+            <img src="img/lobo3.jpg" alt="Imagem Lobo 3">
+            <p>Legenda</p>
+        </div>
+
     </section>
 </body>
 </html>
