--- a/grid-flexbox/index.html
+++ b/grid-flexbox/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="img/CC.png">Logo</a>
+        <img src="img/CC.png" alt="logo" id="logo">
         <nav>
             <ul class="menu">
                 <li><a href="#">Sobre</a></li>
