--- a/grid-flexbox/index.html
+++ b/grid-flexbox/index.html
@@ -121,5 +121,23 @@
         </div>
     </section>
        
+    <h1>Section Grid 3</h1>
+
+    <section class="grid3">
+
+        <div class="grid3-item">
+            <img src="img/lobo4.jpg" alt="Imagem Lobo 4">
+            <p>Legenda</p>
+        </div>
+        <div class="grid3-item">
+            <img src="img/lobo1.jpg" alt="Imagem Lobo 1">
+            <p>Legenda</p>
+        </div>
+        <div class="grid3-item">
+            <img src="img/lobo2.jpg" alt="Imagem Lobo 2">
+            <p>Legenda</p>
+        </div>
+
+    </section>
 </body>
 </html>
