--- a/bootstrap/exercicios/paginas/grid.html
+++ b/bootstrap/exercicios/paginas/grid.html
@@ -21,7 +21,7 @@
     <hr>
 
     <!-- Grid Básica -->
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col bg-primary">1</div>
             <div class="col bg-danger">2</div>
