--- a/bootstrap/exercicios/paginas/componentes.html
+++ b/bootstrap/exercicios/paginas/componentes.html
@@ -53,6 +53,23 @@
 <hr>
 
 <!-- Progresso -->
+<div>
+    <div class="progress mb-4">
+        <div class="progress-bar" style="width: 30%"></div>
+    </div>
+
+    <div>
+        <div class="mb-2 progress-bar progress-bar-striped bg-success" style="width: 92%;">92%</div>
+    </div>
+    <div>
+        <div class="progress" style="height: 40px;">
+           <div class="progress-bar" style="width: 15%;">15%</div>
+           <div class="progress-bar bg-success" style="width: 25%;">25%</div>
+           <div class="progress-bar bg-warning" style="width: 45%;">45%</div>
+           <div class="progress-bar bg-secondary" style="width: 15%;">15%</div>
+        </div>
+    </div>
+</div>
 
 <h1 class="mt-5">3. Mensagens (Alertas) -
     <small>
