--- a/bootstrap/exercicios/paginas/componentes.html
+++ b/bootstrap/exercicios/paginas/componentes.html
@@ -80,6 +80,23 @@
 
 <!-- Alertas -->
 
+<div class="alert alert-primary" role="alert">ATENÇÃO!</div>
+<div class="alert alert-dark" role="alert">ATENÇÃO!</div>
+<div class="alert alert-warning" role="alert">ATENÇÃO!</div>
+
+<!-- <div class="alert-link bg-danger">Cuidado!</div> -->
+
+<div class="alert alert-danger" role="alert">
+    Esta é uma mensagem de  <a href="#" class="alert-link">perigo</a>. Saida desta página imediatamente!
+  </div>
+
+  <div class="alert alert-primary alert-dismissible fade show" role="alert">
+    <strong>Bem-Vindo!</strong> Preencha todos campos abaixo, por favor!
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+
 <h1 class="mt-5">4. Paginação -
     <small>
         <a href="https://getbootstrap.com/docs/4.0/components/pagination/" target="_black">Documentação Oficial</a>
