--- a/bootstrap/exercicios/paginas/componentes.html
+++ b/bootstrap/exercicios/paginas/componentes.html
@@ -162,6 +162,38 @@
 <hr>
 
 <!-- Slider -->
+<div>
+    <div id="slider" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner bg-dark">
+            <div class="carousel-item active">
+                <img src="imgs/slide1.png" alt="imagem 1" class="d-block mx-auto">
+            </div>
+            <div class="carousel-item">
+                <img src="imgs/slide2.png" alt="imagem 2" class="d-block mx-auto">
+            </div>
+            <div class="carousel-item">
+                <img src="imgs/slide3.png" alt="imagem 3" class="d-block mx-auto">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#slider" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#slider" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+
+        <!-- <a href="#slider" class="carousel-control-prev" 
+            data-slider="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a href="#slider" class="carousel-control-next" 
+            data-slider="next">
+            <span class="carousel-control-next-icon"></span> -->
+        </a>
+    </div>
+</div>
 
 <h1 class="mt-5">7. Accordion -
     <small>
