--- a/bootstrap/exercicios/paginas/componentes.html
+++ b/bootstrap/exercicios/paginas/componentes.html
@@ -203,6 +203,64 @@
 <hr>
 
 <!-- Accordion -->
+<div>
+    <div class="mb-5" id="accordion">
+        <div class="card-header" id="pergunta1">
+            <h5 class="mb-0">
+                <button class="btn btn-link" data-toggle="collapse" data-target="#resposta1">
+                    Quem é o cara mais bonito?
+                </button>
+            </h5>
+        </div>
+        <div class="collapse" id="resposta1" data-parent="#accordion">
+            <div class="card-body">
+                Posso dizer?
+            </div>
+        </div>
+    </div>
+    <div class="mb-5" id="accordion">
+        <div class="card-header" id="pergunta2">
+            <h5 class="mb-0">
+                <button class="btn btn-link" data-toggle="collapse" data-target="#resposta2">
+                    Quantos copos de café ja tomou hoje?
+                </button>
+            </h5>
+        </div>
+        <div class="collapse" id="resposta2" data-parent="#accordion">
+            <div class="card-body">
+                Uns 50 ja kkkkkkkkkk?
+            </div>
+        </div>
+    </div>
+    <div class="mb-5" id="accordion">
+        <div class="card-header" id="pergunta3">
+            <h5 class="mb-0">
+                <button class="btn btn-link" data-toggle="collapse" data-target="#resposta3">
+                    Quantas horas é o ideas para estudar?
+                </button>
+            </h5>
+        </div>
+        <div class="collapse" id="resposta3" data-parent="#accordion">
+            <div class="card-body">
+                Vai de cada um meu chapa
+            </div>
+        </div>
+    </div>
+    <div class="mb-5" id="accordion">
+        <div class="card-header" id="pergunta4">
+            <h5 class="mb-0">
+                <button class="btn btn-link" data-toggle="collapse" data-target="#resposta4">
+                    Ta suave ai?
+                </button>
+            </h5>
+        </div>
+        <div class="collapse" id="resposta4" data-parent="#accordion">
+            <div class="card-body">
+               De boas aqui, sor!
+            </div>
+        </div>
+    </div>
+</div>
 
 <script>
    $('[data-toggle="tooltip"').tooltip()
