--- a/bootstrap/exercicios/index.html
+++ b/bootstrap/exercicios/index.html
@@ -6,16 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bootstrap</title>
+    <style>
+
+    </style>
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid">
           <a class="navbar-brand"  wm-link="#paginas/bemVindo.html">Bootstrap</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon bg-primary"></span>
+            <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -35,6 +38,7 @@
           </div>
         </div>
       </nav>
+      
     <main class="p-3" wm-link-destino></main>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
