--- a/jquery/selecionandoElementos1.html
+++ b/jquery/selecionandoElementos1.html
@@ -49,6 +49,13 @@
     </form>
 
     <script>
-        // ...
+        $('#feira').addClass('destaque').removeClass('destaque')
+        $('li').addClass('destaque')
+
+
+        $('form *').hide()
+        $('form :text').show()
+        $('form :password').show()
+
     </script>
 </body>
