--- a/jquery/selecionandoElementos2.html
+++ b/jquery/selecionandoElementos2.html
@@ -81,6 +81,15 @@
         <p>Cod3r Ensino</p>
     </footer>
     <script>
-        // ...
+        const comBorda = { 'border': 'solid 8px orange'}
+        const semBorda = { 'border': 'none'}
+
+        $('a[href="#link3"]').parent().css(comBorda).css(semBorda)
+        $('a[href="#link3"]').parent().next().css(comBorda).css(semBorda)
+        $('a[href="#link1"]').parents().css(comBorda).css(semBorda)
+        $('a[href="#link1"]').parentsUntil($('body')).css(comBorda).css(semBorda)
+
+        $('body').find('a').css(comBorda)
+
     </script>
 </body>
