--- a/jquery/modificandoHTML1.html
+++ b/jquery/modificandoHTML1.html
@@ -15,6 +15,23 @@
     <div id='conteudo3'></div>
 
     <script>
-        // ...
-    </script>
+       //conteudo 1
+       $('#conteudo1').append('<p>')
+
+        //conteudo 2
+        const elementos = [
+            $('<li>').append('Arroz'),
+            $('<li>').append('Feijão'),
+            $('<li>').append('Carne')
+        ]
+
+        const lista = $('<ul><li>Sorteve</ul></li>').prepend(elementos)
+        $('#conteudo2').append(lista)
+
+        // conteudo 3
+        $('#conteudo3').append('<h1>1</h1>').prepend()
+
+        //alterar todos
+        $('div').html('<strong>todos') // não precisa fechar a tag
+</script>
 </body>
