--- a/jquery/modificandoHTML2.html
+++ b/jquery/modificandoHTML2.html
@@ -17,6 +17,10 @@
     <p class='numero'>5</p>
 
     <script>
-        // ...
+        $('#div1').append(', 2')
+        $('#div1').prepend('0, ')
+
+        $('#div2').before('<p>ola')
+        $('#div2').after('<p>tchau')
     </script>
 </body>
